<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.ListaBagTransfActivity">

    <TextView
        android:id="@+id/textViewTotalBagTransf"
        style="@style/TextViewMenuNegrito"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:text="@string/texto_total_bag_transf" />

    <TextView
        android:id="@+id/textViewDthrTransf"
        style="@style/TextViewMenuNormal"
        android:paddingLeft="3dp"
        android:paddingBottom="3dp"
        android:text="@string/texto_dthr_inicial" />

    <TextView
        android:id="@+id/textViewSafra"
        style="@style/TextViewMenuNormal"
        android:paddingLeft="3dp"
        android:paddingBottom="3dp"
        android:text="@string/texto_safra" />

    <TextView
        android:id="@+id/textViewTituloListaBagTransf"
        style="@style/TextViewTituloLista"
        android:text="@string/texto_titulo_lista_bag_transf" />

    <ListView
        android:id="@+id/bagTransfListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textViewProcesso"
        style="@style/TextViewItemList"
        android:text="@string/texto_item_list" />

    <Button
        android:id="@+id/buttonLeituraBagTransf"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_leitura_bag" />

    <Button
        android:id="@+id/buttonDigBagTransf"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_dig_bag" />

    <Button
        android:id="@+id/buttonSafra"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_alterar_safra" />

    <LinearLayout
        android:id="@+id/rightRelativeLayoutTransf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonCancelarTransf"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_canc_transf" />

        <Button
            android:id="@+id/buttonFinalizarTransf"
            style="@style/BotaoAvulso"
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/texto_finalizar_transf" />

    </LinearLayout>

</LinearLayout>