<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.ListaBagCarregActivity">

    <TextView
        android:id="@+id/textViewTotalBagCarreg"
        style="@style/TextViewMenuNegrito"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:text="@string/texto_total_bag_carreg" />

    <TextView
        android:id="@+id/textViewQtdeBagAdd"
        style="@style/TextViewMenuNegrito"
        android:paddingLeft="3dp"
        android:text="@string/texto_qtde_bag_carreg" />

    <TextView
        android:id="@+id/textViewDthr"
        style="@style/TextViewMenuNormal"
        android:paddingLeft="3dp"
        android:paddingBottom="3dp"
        android:text="@string/texto_dthr_inicial" />

    <TextView
        android:id="@+id/textViewTituloListaBag"
        style="@style/TextViewTituloLista"
        android:text="@string/texto_titulo_lista_bag" />

    <ListView
        android:id="@+id/bagListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/textViewProcesso"
        style="@style/TextViewItemList"
        android:text="@string/texto_item_list" />

    <Button
        android:id="@+id/buttonLeituraBagCarreg"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_leitura_bag" />

    <Button
        android:id="@+id/buttonDigBagCarreg"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_dig_bag" />

    <Button
        android:id="@+id/buttonLog"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_log" />

    <Button
        android:id="@+id/buttonFinalizarCarreg"
        style="@style/BotaoAvulso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_finalizar_carga" />

</LinearLayout>